--- a/voluntariado-front/Contacto.html
+++ b/voluntariado-front/Contacto.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="arcade, architecture, onepage, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="shortcut icon" />
+    <link href="img/icono.jpg" rel="shortcut icon" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/owl.carousel.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/fontello.css" />
+    <link rel="stylesheet" href="css/estilos.css" />
 
 
     <!--[if lt IE 9]>
@@ -29,6 +31,9 @@
 </head>
 
 <body>
+    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
+        <i class="icon-whatsapp"></i>
+    </a>
     <!-- Page Preloder -->
     <div id="preloder">
         <div class="loader"></div>
