--- a/voluntariado-front/Enseñanzas.html
+++ b/voluntariado-front/Enseñanzas.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Arcade - Architecture</title>
+    <title>Iglesia Cristiana Visión de Fe</title>
     <meta charset="UTF-8">
     <meta name="description" content="Arcade - Architecture Template">
     <meta name="keywords" content="arcade, architecture, onepage, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="shortcut icon" />
+    <link href="img/icono.jpg" rel="shortcut icon" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/owl.carousel.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/fontello.css" />
+    <link rel="stylesheet" href="css/estilos.css" />
 
 
     <!--[if lt IE 9]>
@@ -29,6 +31,9 @@
 </head>
 
 <body>
+    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
+        <i class="icon-whatsapp"></i>
+    </a>
     <!-- Page Preloder -->
     <div id="preloder">
         <div class="loader"></div>
@@ -82,7 +87,7 @@
                         </div>
                         <div class="blog-content ">
                             <div class="post-date ">29 February 2018</div>
-                            <h2><a href=" ">This is an architecture news post</a></h2>
+                            <h2><a href=" ">Aviso 1</a></h2>
                             <div class="post-meta ">
                                 <a href="# ">John Doe <i class="fa fa-star-o "></i></a>
                                 <a href="# ">News <i class="fa fa-newspaper-o "></i></a>
@@ -102,7 +107,7 @@
                         </div>
                         <div class="blog-content ">
                             <div class="post-date ">29 February 2018</div>
-                            <h2><a href=" ">This is an architecture news post</a></h2>
+                            <h2><a href=" ">Aviso 2</a></h2>
                             <div class="post-meta ">
                                 <a href="# ">John Doe <i class="fa fa-star-o "></i></a>
                                 <a href="# ">News <i class="fa fa-newspaper-o "></i></a>
@@ -122,7 +127,7 @@
                         </div>
                         <div class="blog-content ">
                             <div class="post-date ">29 February 2018</div>
-                            <h2><a href=" ">This is an architecture news post</a></h2>
+                            <h2><a href=" ">Aviso 3</a></h2>
                             <div class="post-meta ">
                                 <a href="# ">John Doe <i class="fa fa-star-o "></i></a>
                                 <a href="# ">News <i class="fa fa-newspaper-o "></i></a>
@@ -133,87 +138,38 @@
                                 natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum et mauris rutrum, scelerisque orci id, rutrum erat...</p>
                         </div>
                     </div>
-                    <div class="pagination ">
-                        <a href="# ">01</a>
-                        <a href=" " class="active ">02</a>
-                        <a href=" ">03</a>
-                    </div>
                 </div>
+            </div>
 
 
 
-                <!-- Footer section start -->
-                <footer class="footer-section ">
-                    <div class="footer-social ">
-                        <div class="social-links ">
-                            <a href="# "><i class="fa fa-pinterest "></i></a>
-                            <a href="# "><i class="fa fa-linkedin "></i></a>
-                            <a href="# "><i class="fa fa-instagram "></i></a>
-                            <a href="# "><i class="fa fa-facebook "></i></a>
-                            <a href="# "><i class="fa fa-twitter "></i></a>
-                        </div>
-                    </div>
-                    <div class="container ">
-                        <div class="row ">
-                            <div class="col-lg-9 offset-lg-3 ">
-                                <div class="row ">
-                                    <div class="col-md-4 ">
-                                        <div class="footer-item ">
-                                            <ul>
-                                                <li><a href="# ">Home</a></li>
-                                                <li><a href="# ">About us</a></li>
-                                                <li><a href="# ">Services</a></li>
-                                                <li><a href="# ">Portfolio</a></li>
-                                                <li><a href="# ">Blog</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 ">
-                                        <div class="footer-item ">
-                                            <ul>
-                                                <li><a href="# ">Terms & Conditions</a></li>
-                                                <li><a href="# ">FAQ</a></li>
-                                                <li><a href="# ">Help Desk</a></li>
-                                                <li><a href="# ">Job Aplications</a></li>
-                                                <li><a href="# ">Site Map</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 ">
-                                        <div class="footer-item ">
-                                            <ul>
-                                                <li><a href="# ">Privacy</a></li>
-                                                <li><a href="# ">Contact us</a></li>
-                                                <li><a href="# ">Newsletter</a></li>
-                                                <li><a href="# ">Clients Testimonials</a></li>
-                                                <li><a href="# ">FAQ</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    <div class="copyright ">Copyright &copy;
-                        <script>
-                            document.write(new Date().getFullYear());
-                        </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o " aria-hidden="true "></i> by <a href="https://colorlib.com " target="_blank ">Colorlib</a></div>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                </footer>
-                <!-- Footer section end -->
+            <!-- Footer section start -->
+            <!-- Footer section start -->
+            <footer class="footer-section">
 
 
 
-                <!--====== Javascripts & Jquery ======-->
-                <script src="js/jquery-2.1.4.min.js "></script>
-                <script src="js/bootstrap.min.js "></script>
-                <script src="js/isotope.pkgd.min.js "></script>
-                <script src="js/owl.carousel.min.js "></script>
-                <script src="js/jquery.owl-filter.js "></script>
-                <script src="js/magnific-popup.min.js "></script>
-                <script src="js/circle-progress.min.js "></script>
-                <script src="js/main.js "></script>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                <div class="copyright">Copyright &copy;
+                    <script>
+                        document.write(new Date().getFullYear());
+                    </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
+            </footer>
+            <!-- Footer section end -->
+
+
+
+            <!--====== Javascripts & Jquery ======-->
+            <script src="js/jquery-2.1.4.min.js "></script>
+            <script src="js/bootstrap.min.js "></script>
+            <script src="js/isotope.pkgd.min.js "></script>
+            <script src="js/owl.carousel.min.js "></script>
+            <script src="js/jquery.owl-filter.js "></script>
+            <script src="js/magnific-popup.min.js "></script>
+            <script src="js/circle-progress.min.js "></script>
+            <script src="js/main.js "></script>
 </body>
 
 </html>
