--- a/voluntariado-front/Peticiones.html
+++ b/voluntariado-front/Peticiones.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="arcade, architecture, onepage, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="shortcut icon" />
+    <link href="img/icono.jpg" rel="shortcut icon" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
@@ -29,104 +29,104 @@
 </head>
 
 <body>
-    <!-- Page Preloder -->
-    <div id="preloder">
-        <div class="loader"></div>
-    </div>
-
-    <!-- Header section start -->
-    <header class="header-area">
-        <a href="index.html" class="logo-area">
-            <img src="img/logo.png" alt="" width="300" height="150">
-        </a>
-        <div class="nav-switch">
-            <i class="fa fa-bars"></i>
+    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
+        <i class="icon-whatsapp"></i>
+        <!-- Page Preloder -->
+        <div id="preloder">
+            <div class="loader"></div>
         </div>
-        <div class="top-bar">
-            <nav class="nav-menu">
-                <ul>
-                    <li class="active"><a href="index.html">Inicio</a></li>
-                    <li><a href="QuienesSomos.html">¿Quienes somos?</a></li>
-                    <li><a href="Enseñanzas.html">Enseñanzas</a></li>
-                    <li><a href="Transmisiones.html">Transmisiones</a></li>
-                    <li><a href="Noticias.html">Noticias</a></li>
-                    <li><a href="Peticiones.html">Peticiones de Oración</a></li>
-                    <li><a href="Contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <!-- Header section end -->
+
+        <!-- Header section start -->
+        <header class="header-area">
+            <a href="index.html" class="logo-area">
+                <img src="img/logo.png" alt="" width="300" height="150">
+            </a>
+            <div class="nav-switch">
+                <i class="fa fa-bars"></i>
+            </div>
+            <div class="top-bar">
+                <nav class="nav-menu">
+                    <ul>
+                        <li class="active"><a href="index.html">Inicio</a></li>
+                        <li><a href="QuienesSomos.html">¿Quienes somos?</a></li>
+                        <li><a href="Enseñanzas.html">Enseñanzas</a></li>
+                        <li><a href="Transmisiones.html">Transmisiones</a></li>
+                        <li><a href="Noticias.html">Noticias</a></li>
+                        <li><a href="Peticiones.html">Peticiones de Oración</a></li>
+                        <li><a href="Contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <!-- Header section end -->
 
 
-    <!-- Page header section start -->
-    <section class="page-header-section set-bg" data-setbg="img/header-bg-2.jpg">
-        <div class="container">
-            <h1 class="header-title">
-                Peticiones de Oración
-            </h1>
-        </div>
-    </section>
-    <!-- Page header section end -->
+        <!-- Page header section start -->
+        <section class="page-header-section set-bg" data-setbg="img/header-bg-2.jpg">
+            <div class="container">
+                <h1 class="header-title">
+                    Peticiones de Oración
+                </h1>
+            </div>
+        </section>
+        <!-- Page header section end -->
 
 
-    <!-- Page section start -->
-    <section class="page-section pt100">
-        <div class="container pb100">
+        <!-- Page section start -->
+        <section class="page-section pt100">
+            <div class="container pb100">
 
-            <div class="row">
-                <div class="col-lg-3 contact-info mb-5 mb-lg-0">
-                    <p>Dirección: 4 Calle 5-52 zona 13 guatemala 01013-Guatemala, Guatemala </p>
-                    <p>Teléfono: +(502) 2292 0286</p>
-                    <p>Correo electrónico: informacion@visiondefe.org.gt</p>
-                    <div class="cf-social">
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                        <a href="#"><i class="fa fa-pinterest"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
+                <div class="row">
+                    <div class="col-lg-9">
+                        <p align="justify">
+                            <font size="5">
+                                Estamos interesados en ti y en tus necesidades, y creemos que Dios responderá toda petición que hagamos de común acuerdo. Envía tu petición y junto a un equipo de intercesión estaremos orando por ella.
+                            </font>
+                        </p>
+                        <h4><b>
+                            Para enviar tu petición debes llenar el siguiente formulario:  
+                        </b></h4>
+                        <form class="contact-form">
+                            <input type="text" placeholder="Ingrese su nombre" required="campo obligatorio">
+                            <input type="text" placeholder="Ingrese su apellido" required="campo obligatorio">
+                            <input type="text" placeholder="Asunto del correo">
+                            <input type="text" placeholder="Ingrese su correo electrónico" required="campo obligatorio">
+                            <textarea placeholder="Escriba un mensaje" required="campo obligatorio"></textarea>
+                            <button class="site-btn sb-dark">Enviar</button>
+                        </form>
                     </div>
                 </div>
-                <div class="col-lg-9">
-                    <form class="contact-form">
-                        <input type="text" placeholder="Ingrese su nombre">
-                        <input type="text" placeholder="Ingrese su correo electrónico">
-                        <textarea placeholder="Escriba un mensaje"></textarea>
-                        <button class="site-btn sb-dark">Enviar</button>
-                    </form>
-                </div>
             </div>
-        </div>
-        <div class="map-area" id="map-canvas"></div>
-    </section>
-    <!-- Page section end -->
+        </section>
+        <!-- Page section end -->
 
 
 
 
-    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-    <div class="copyright">Copyright &copy;
-        <script>
-            document.write(new Date().getFullYear());
-        </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
-    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-    </footer>
-    <!-- Footer section end -->
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        <div class="copyright">Copyright &copy;
+            <script>
+                document.write(new Date().getFullYear());
+            </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        </footer>
+        <!-- Footer section end -->
 
 
 
-    <!--====== Javascripts & Jquery ======-->
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.owl-filter.js"></script>
-    <script src="js/magnific-popup.min.js"></script>
-    <script src="js/circle-progress.min.js"></script>
-    <script src="js/main.js"></script>
+        <!--====== Javascripts & Jquery ======-->
+        <script src="js/jquery-2.1.4.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/isotope.pkgd.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/jquery.owl-filter.js"></script>
+        <script src="js/magnific-popup.min.js"></script>
+        <script src="js/circle-progress.min.js"></script>
+        <script src="js/main.js"></script>
 
-    <!-- load for map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YyDTa0qqOjIerob2VTIwo_XVMhrruxo"></script>
-    <script src="js/map.js"></script>
+        <!-- load for map -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YyDTa0qqOjIerob2VTIwo_XVMhrruxo"></script>
+        <script src="js/map.js"></script>
 
 </body>
 
