--- a/voluntariado-front/QuienesSomos.html
+++ b/voluntariado-front/QuienesSomos.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Arcade - Architecture</title>
+    <title>Iglesia Cristiana Visión de Fe</title>
     <meta charset="UTF-8">
     <meta name="description" content="Arcade - Architecture Template">
     <meta name="keywords" content="arcade, architecture, onepage, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="shortcut icon" />
+    <link href="img/icono.jpg" rel="shortcut icon" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/owl.carousel.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/fontello.css" />
+    <link rel="stylesheet" href="css/estilos.css" />
 
 
     <!--[if lt IE 9]>
@@ -29,159 +31,162 @@
 </head>
 
 <body>
-    <!-- Page Preloder -->
-    <div id="preloder">
-        <div class="loader"></div>
-    </div>
 
-    <!-- Header section start -->
-    <header class="header-area">
-        <a href="index.html" class="logo-area">
-            <img src="img/logo.png" alt="" width="300" height="150">
-        </a>
-        <div class="nav-switch">
-            <i class="fa fa-bars"></i>
+    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
+        <i class="icon-whatsapp"></i>
+        <!-- Page Preloder -->
+        <div id="preloder">
+            <div class="loader"></div>
         </div>
-        <div class="top-bar">
-            <nav class="nav-menu">
-                <ul>
-                    <li class="active"><a href="index.html">Inicio</a></li>
-                    <li><a href="QuienesSomos.html">¿Quienes somos?</a></li>
-                    <li><a href="Enseñanzas.html">Enseñanzas</a></li>
-                    <li><a href="Transmisiones.html">Transmisiones</a></li>
-                    <li><a href="Noticias.html">Noticias</a></li>
-                    <li><a href="Peticiones.html">Peticiones de Oración</a></li>
-                    <li><a href="Contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <!-- Header section end -->
 
-
-    <!-- Page header section start -->
-    <section class="page-header-section set-bg" data-setbg="img/header-bg-2.jpg">
-        <div class="container">
-            <h1 class="header-title">¿Quienes somos?</h1>
-        </div>
-    </section>
-    <!-- Page header section end -->
-
-
-
-    <!-- Intro section start -->
-    <section class="intro-section spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 intro-text">
-                    <h1>Nuestra <span>Historia</span></h1>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
-                                libero ut pulvinar accumsan, tortor nisl iaculis ligula. </p>
-                        </div>
-                        <div class="col-md-6">
-                            <p>Curabitur finibus dolor vel lectus pretium interdum a eget ante. Morbi rhoncus feugiat imperdiet. Curabitur non maximus leo. Nulla in ipsum sed magna egestas bibendum. Integer in sem sagittis, commodo mi sit amet, commodo nibh.
-                                Suspendisse potenti. Aliquam erat volutpat. </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 pt-4">
-                    <img src="img/about.jpg" alt="">
-                </div>
+        <!-- Header section start -->
+        <header class="header-area">
+            <a href="index.html" class="logo-area">
+                <img src="img/logo.png" alt="" width="300" height="150">
+            </a>
+            <div class="nav-switch">
+                <i class="fa fa-bars"></i>
             </div>
-        </div>
-    </section>
-    <!-- Intro section end -->
-
-
-    <!-- Testimonials section start -->
-    <section class="testimonials-section spad">
-        <div class="testimonials-image-box"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 pl-lg-0 offset-lg-5 cta-content">
-
-                    <div class="testimonials-slider" id="test-slider">
-                        <div class="ts-item">
-                            <h1>Visión</h1>
-                            <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
-                                libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur finibus dolor vel lectus pretium interdum a eget ante. </p>
-                        </div>
-                        <div class="ts-item">
-                            <h1>Misión</h1>
-                            <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
-                                libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur finibus dolor vel lectus pretium interdum a eget ante. </p>
-                        </div>
-
-                    </div>
-                    <div class="slide-num-holder test-slider" id="snh-2"></div>
-                </div>
+            <div class="top-bar">
+                <nav class="nav-menu">
+                    <ul>
+                        <li class="active"><a href="index.html">Inicio</a></li>
+                        <li><a href="QuienesSomos.html">¿Quienes somos?</a></li>
+                        <li><a href="Enseñanzas.html">Enseñanzas</a></li>
+                        <li><a href="Transmisiones.html">Transmisiones</a></li>
+                        <li><a href="Noticias.html">Noticias</a></li>
+                        <li><a href="Peticiones.html">Peticiones de Oración</a></li>
+                        <li><a href="Contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
             </div>
-        </div>
-    </section>
-    <!-- Testimonials section end -->
+        </header>
+        <!-- Header section end -->
 
 
-
-    <!-- Team section start -->
-    <section class="team-section spad">
-        <div class="container">
-            <div class="section-title mb100">
-                <h1>Equipo Pastoral</h1>
+        <!-- Page header section start -->
+        <section class="page-header-section set-bg" data-setbg="img/header-bg-2.jpg">
+            <div class="container">
+                <h1 class="header-title">¿Quienes somos?</h1>
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-member">
-                        <img src="img/team/1.jpg" alt="">
-                        <div class="member-info">
-                            <h2>Jack Smith</h2>
-                            <p>Senior Architect</p>
+        </section>
+        <!-- Page header section end -->
+
+
+
+        <!-- Intro section start -->
+        <section class="intro-section spad">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 intro-text">
+                        <h1>Nuestra <span>Historia</span></h1>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
+                                    libero ut pulvinar accumsan, tortor nisl iaculis ligula. </p>
+                            </div>
+                            <div class="col-md-6">
+                                <p>Curabitur finibus dolor vel lectus pretium interdum a eget ante. Morbi rhoncus feugiat imperdiet. Curabitur non maximus leo. Nulla in ipsum sed magna egestas bibendum. Integer in sem sagittis, commodo mi sit amet, commodo
+                                    nibh. Suspendisse potenti. Aliquam erat volutpat. </p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-member">
-                        <img src="img/team/2.jpg" alt="">
-                        <div class="member-info">
-                            <h2>Lili Jameson</h2>
-                            <p>Senior Architect</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-member">
-                        <img src="img/team/3.jpg" alt="">
-                        <div class="member-info">
-                            <h2>Michael Dow</h2>
-                            <p>Senior Architect</p>
-                        </div>
+                    <div class="col-lg-4 pt-4">
+                        <img src="img/about.jpg" alt="">
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <!-- Intro section end -->
 
-    <!-- Footer section start -->
-    <footer class="footer-section">
 
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        <div class="copyright">Copyright &copy;
-            <script>
-                document.write(new Date().getFullYear());
-            </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-    </footer>
-    <!-- Footer section end -->
-    <!--====== Javascripts & Jquery ======-->
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.owl-filter.js"></script>
-    <script src="js/magnific-popup.min.js"></script>
-    <script src="js/circle-progress.min.js"></script>
-    <script src="js/main.js"></script>
+        <!-- Testimonials section start -->
+        <section class="testimonials-section spad">
+            <div class="testimonials-image-box"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7 pl-lg-0 offset-lg-5 cta-content">
+
+                        <div class="testimonials-slider" id="test-slider">
+                            <div class="ts-item">
+                                <h1>Visión</h1>
+                                <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
+                                    libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur finibus dolor vel lectus pretium interdum a eget ante. </p>
+                            </div>
+                            <div class="ts-item">
+                                <h1>Misión</h1>
+                                <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
+                                    libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur finibus dolor vel lectus pretium interdum a eget ante. </p>
+                            </div>
+
+                        </div>
+                        <div class="slide-num-holder test-slider" id="snh-2"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Testimonials section end -->
+
+
+
+        <!-- Team section start -->
+        <section class="team-section spad">
+            <div class="container">
+                <div class="section-title mb100">
+                    <h1>Equipo Pastoral</h1>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="team-member">
+                            <img src="img/team/1.jpg" alt="">
+                            <div class="member-info">
+                                <h2>Jack Smith</h2>
+                                <p>Senior Architect</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="team-member">
+                            <img src="img/team/2.jpg" alt="">
+                            <div class="member-info">
+                                <h2>Lili Jameson</h2>
+                                <p>Senior Architect</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="team-member">
+                            <img src="img/team/3.jpg" alt="">
+                            <div class="member-info">
+                                <h2>Michael Dow</h2>
+                                <p>Senior Architect</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer section start -->
+        <footer class="footer-section">
+
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            <div class="copyright">Copyright &copy;
+                <script>
+                    document.write(new Date().getFullYear());
+                </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        </footer>
+        <!-- Footer section end -->
+        <!--====== Javascripts & Jquery ======-->
+        <script src="js/jquery-2.1.4.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/isotope.pkgd.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/jquery.owl-filter.js"></script>
+        <script src="js/magnific-popup.min.js"></script>
+        <script src="js/circle-progress.min.js"></script>
+        <script src="js/main.js"></script>
 </body>
 
 </html>
