--- a/voluntariado-front/index.html
+++ b/voluntariado-front/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/owl.carousel.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/fontello.css" />
+    <link rel="stylesheet" href="css/estilos.css" />
 
 
     <!--[if lt IE 9]>
@@ -73,11 +75,12 @@
                     </div>
                 </div>
             </div>
-            <div class="hero-slide-item set-bg" data-setbg="img/bg.jpg">
+            <div class="hero-slide-item set-bg" data-setbg="img/bg1.jpg">
                 <div class="slide-inner">
                     <div class="slide-content">
-                        <h2>Acompañanos con tu familia <br>en nuestros servicios <br> dominicales</h2>
+                        <h2>Acompañanos en nuestros <br>servicios dominicales <br>presenciales </h2>
                         <h4>en los horarios: 8:00 am y 10:30 am </h4>
+                        <h4>Reserva tu lugar por medio de Whatsapp </h4>
                     </div>
                 </div>
             </div>
@@ -157,41 +160,35 @@
                 <div class="project-content">
                     <h2>Biggest <br> Restaurations</h2>
                     <p>Jan 19, 2018</p>
-                    <a href="#" class="seemore">See Project </a>
                 </div>
             </div>
             <div class="single-project set-bg build" data-setbg="img/projects/2.jpg">
                 <div class="project-content">
                     <h2>Office <br> Building</h2>
                     <p>Jan 19, 2018</p>
-                    <a href="#" class="seemore">See Project </a>
                 </div>
             </div>
             <div class="single-project set-bg apart" data-setbg="img/projects/3.jpg">
                 <div class="project-content">
                     <h2>Nice <br> Apartments</h2>
                     <p>Jan 19, 2018</p>
-                    <a href="#" class="seemore">See Project </a>
                 </div>
             </div>
             <div class="single-project set-bg rest" data-setbg="img/projects/4.jpg">
                 <div class="project-content">
                     <h2>Biggest <br> Restaurations</h2>
                     <p>Jan 19, 2018</p>
-                    <a href="#" class="seemore">See Project </a>
                 </div>
             </div>
             <div class="single-project set-bg apart" data-setbg="img/projects/2.jpg">
                 <div class="project-content">
                     <h2>Office <br> Building</h2>
                     <p>Jan 19, 2018</p>
-                    <a href="#" class="seemore">See Project </a>
                 </div>
             </div>
         </div>
     </div>
     <!-- Projects section end -->
-
 
 
 
@@ -210,7 +207,9 @@
     </footer>
     <!-- Footer section end -->
 
-
+    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
+        <i class="icon-whatsapp"></i>
+    </a>
 
 
     <!--====== Javascripts & Jquery ======-->
