--- a/voluntariado-front/Transmisiones.html
+++ b/voluntariado-front/Transmisiones.html
@@ -79,7 +79,7 @@
                 <div class="row">
 
                     <div class="col-lg-7 service-text">
-                        <h1>Sigue nuestros servios dominicales atraves de las diferente plataformas <span>digitales</span></h1>
+                        <h1>Sigue nuestros servicios dominicales atraves de las diferente plataformas <span>digitales</span></h1>
                         <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus, libero
                             ut pulvinar accumsan, tortor nisl iaculis ligula. </p>
                     </div>
