--- a/voluntariado-front/QuienesSomos.html
+++ b/voluntariado-front/QuienesSomos.html
@@ -82,17 +82,15 @@
                         <h1>Nuestra <span>Historia</span></h1>
                         <div class="row">
                             <div class="col-md-6">
-                                <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
-                                    libero ut pulvinar accumsan, tortor nisl iaculis ligula. </p>
+                                <p>Visión de Fe es una iglesia que nació en el corazón de los pastores Vladimiro y Juani de Vásquez, atendiendo el llamado del Señor a iniciar un ministerio en donde las personas necesitadas pudieran encontrar amor, ministración y libertad de las ataduras que pudieran estar afectándoles. </p>
                             </div>
                             <div class="col-md-6">
-                                <p>Curabitur finibus dolor vel lectus pretium interdum a eget ante. Morbi rhoncus feugiat imperdiet. Curabitur non maximus leo. Nulla in ipsum sed magna egestas bibendum. Integer in sem sagittis, commodo mi sit amet, commodo
-                                    nibh. Suspendisse potenti. Aliquam erat volutpat. </p>
+                                <p>Es así como el 26 de octubre de 1986 nace la Iglesia Cristiana Visión de Fe. En la actualidad y gracias al Señor la Iglesia ha crecido de una forma muy especial y como consecuencia de ello hay iglesias Visión de Fe en varios países y en el interior de la república de Guatemala.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 pt-4">
-                        <img src="img/about.jpg" alt="">
+                        <img src="img/pastores.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -110,8 +108,7 @@
                         <div class="testimonials-slider" id="test-slider">
                             <div class="ts-item">
                                 <h1>Visión</h1>
-                                <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
-                                    libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur finibus dolor vel lectus pretium interdum a eget ante. </p>
+                                <p>Somos una iglesia restauradora de vidas. Utilizamos el sistema de enseñanza de nuestro Señor Jesús, motivando  a todos   a  guardar  Su  Palabra  y  nos proponemos formar a cada creyente como un hacedor de discípulos. Mateo 28:19 </p>
                             </div>
                             <div class="ts-item">
                                 <h1>Misión</h1>
