--- a/voluntariado-front/QuienesSomos.html
+++ b/voluntariado-front/QuienesSomos.html
@@ -82,17 +82,17 @@
                         <h1>Nuestra <span>Historia</span></h1>
                         <div class="row">
                             <div class="col-md-6">
-                                <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
-                                    libero ut pulvinar accumsan, tortor nisl iaculis ligula. </p>
+                                <p>Visión de Fe es una iglesia que nació en el corazón de los pastores Vladimiro y Juani de Vásquez, atendiendo el llamado del Señor a iniciar un ministerio en donde las personas necesitadas pudieran encontrar amor, ministración
+                                    y libertad de las ataduras que pudieran estar afectándoles.</p>
                             </div>
                             <div class="col-md-6">
-                                <p>Curabitur finibus dolor vel lectus pretium interdum a eget ante. Morbi rhoncus feugiat imperdiet. Curabitur non maximus leo. Nulla in ipsum sed magna egestas bibendum. Integer in sem sagittis, commodo mi sit amet, commodo
-                                    nibh. Suspendisse potenti. Aliquam erat volutpat. </p>
+                                <p>Es así como el 26 de octubre de 1986 nace la Iglesia Cristiana Visión de Fe. En la actualidad y gracias al Señor la Iglesia ha crecido de una forma muy especial y como consecuencia de ello hay iglesias Visión de Fe en varios
+                                    países y en el interior de la república de Guatemala.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 pt-4">
-                        <img src="img/about.jpg" alt="">
+                        <img src="img/team/foto1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -102,7 +102,9 @@
 
         <!-- Testimonials section start -->
         <section class="testimonials-section spad">
-            <div class="testimonials-image-box"></div>
+            <div class="testimonials-image-box">
+                <img src="img/portfolio/logofondo.jpg">
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 pl-lg-0 offset-lg-5 cta-content">
