Correccciones en Html y agregación de conexión con canal de Youtube y página de facebook

--- a/voluntariado-front/Noticias.html
+++ b/voluntariado-front/Noticias.html
@@ -146,18 +146,18 @@
 
                 <!-- Footer section start -->
                 <!-- Footer section start -->
-                <footer class="footer-section">
+                <!--<footer class="footer-section">-->
 
 
 
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    <div class="copyright">Copyright &copy;
+                    <!--<div class="copyright">Copyright &copy;
                         <script>
                             document.write(new Date().getFullYear());
-                        </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
+                        </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>-->
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
-                </footer>
+                <!--</footer>-->
                 <!-- Footer section end -->
 
 
