--- a/voluntariado-front/QuienesSomos.html
+++ b/voluntariado-front/QuienesSomos.html
@@ -78,37 +78,37 @@
         <section class="intro-section spad">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 intro-text">
+                    <div class="col-lg-7 intro-text">
                         <h1>Nuestra <span>Historia</span></h1>
                         <div class="row">
-                            <div class="col-md-6">
-<<<<<<< HEAD
-                                <p>Visión de Fe es una iglesia que nació en el corazón de los pastores Vladimiro y Juani de Vásquez, atendiendo el llamado del Señor a iniciar un ministerio en donde las personas necesitadas pudieran encontrar amor, ministración
+                            <div class="col-md-9">
+                                <p align="justify">Visión de Fe es una iglesia que nació en el corazón de los pastores
+                                    Vladimiro y Juani
+                                    de Vásquez, atendiendo el llamado del Señor a iniciar un ministerio en donde las
+                                    personas necesitadas pudieran encontrar amor, ministración
                                     y libertad de las ataduras que pudieran estar afectándoles.</p>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Es así como el 26 de octubre de 1986 nace la Iglesia Cristiana Visión de Fe. En la actualidad y gracias al Señor la Iglesia ha crecido de una forma muy especial y como consecuencia de ello hay iglesias Visión de Fe en varios
+
+                                <p align="justify">Es así como el 26 de octubre de 1986 nace la Iglesia Cristiana Visión
+                                    de Fe. En la
+                                    actualidad y gracias al Señor la Iglesia ha crecido de una forma muy especial y como
+                                    consecuencia de ello hay iglesias Visión de Fe en varios
                                     países y en el interior de la república de Guatemala.</p>
-=======
-                                <p>Visión de Fe es una iglesia que nació en el corazón de los pastores Vladimiro y Juani de Vásquez, atendiendo el llamado del Señor a iniciar un ministerio en donde las personas necesitadas pudieran encontrar amor, ministración y libertad de las ataduras que pudieran estar afectándoles. </p>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Es así como el 26 de octubre de 1986 nace la Iglesia Cristiana Visión de Fe. En la actualidad y gracias al Señor la Iglesia ha crecido de una forma muy especial y como consecuencia de ello hay iglesias Visión de Fe en varios países y en el interior de la república de Guatemala.</p>
->>>>>>> 2b28935afae39e58b1b5b82eed1dd9af0acd7fdd
+
+                                <p align="justify">Visión de Fe es una iglesia que nació en el corazón de los pastores
+                                    Vladimiro y Juani
+                                    de Vásquez, atendiendo el llamado del Señor a iniciar un ministerio en donde las
+                                    personas necesitadas pudieran encontrar amor, ministración y libertad de las
+                                    ataduras que pudieran estar afectándoles. </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 pt-4">
-<<<<<<< HEAD
+                    <div class="col-lg-5 pt-5">
                         <img src="img/team/foto1.png" alt="">
-=======
                         <img src="img/pastores.jpg" alt="">
->>>>>>> 2b28935afae39e58b1b5b82eed1dd9af0acd7fdd
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Intro section end -->
 
 
         <!-- Testimonials section start -->
@@ -119,25 +119,27 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 pl-lg-0 offset-lg-5 cta-content">
-
                         <div class="testimonials-slider" id="test-slider">
                             <div class="ts-item">
                                 <h1>Visión</h1>
-                                <p>Somos una iglesia restauradora de vidas. Utilizamos el sistema de enseñanza de nuestro Señor Jesús, motivando  a todos   a  guardar  Su  Palabra  y  nos proponemos formar a cada creyente como un hacedor de discípulos. Mateo 28:19 </p>
+                                <p>Somos una iglesia restauradora de vidas. Utilizamos el sistema de enseñanza de
+                                    nuestro Señor Jesús, motivando a todos  a guardar Su  Palabra  y  nos proponemos
+                                    formar a cada creyente como un hacedor de discípulos. Mateo 28:19 </p>
                             </div>
                             <div class="ts-item">
                                 <h1>Misión</h1>
-                                <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
-                                    libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur finibus dolor vel lectus pretium interdum a eget ante. </p>
+                                <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus.
+                                    Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at
+                                    mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
+                                    libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur finibus dolor vel
+                                    lectus pretium interdum a eget ante. </p>
                             </div>
-
                         </div>
                         <div class="slide-num-holder test-slider" id="snh-2"></div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Testimonials section end -->
 
 
 
@@ -180,15 +182,17 @@
         </section>
 
         <!-- Footer section start -->
-        <footer class="footer-section">
+        <!--<footer class="footer-section">-->
 
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            <div class="copyright">Copyright &copy;
+            <!--<div class="copyright">Copyright &copy;
                 <script>
                     document.write(new Date().getFullYear());
-                </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
+                </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o"
+                    aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+            </div>-->
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        </footer>
+        <!--</footer>-->
         <!-- Footer section end -->
         <!--====== Javascripts & Jquery ======-->
         <script src="js/jquery-2.1.4.min.js"></script>
