--- a/voluntariado-front/Transmisiones.html
+++ b/voluntariado-front/Transmisiones.html
@@ -79,8 +79,12 @@
                 <div class="row">
 
                     <div class="col-lg-7 service-text">
-                        <h1>Sigue nuestros servicios dominicales atraves de las diferente plataformas <span>digitales</span></h1>
-                        <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus, libero
+                        <h1>Sigue nuestros servicios dominicales atraves de las diferente plataformas
+                            <span>digitales</span>
+                        </h1>
+                        <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque
+                            sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada,
+                            accumsan pellentesque ipsum. Nunc dapibus, libero
                             ut pulvinar accumsan, tortor nisl iaculis ligula. </p>
                     </div>
                     <div class="col-lg-5">
@@ -100,45 +104,54 @@
 
 
         <!-- Service box section start -->
-        <div class="service-box-section spad set-bg" data-setbg="img/service-bg.jpg">
+        <div class="service-box-section spad set-bg" data-setbg="img/bg1.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
-                        <div class="solid-service-box">
-                            <h2>01.</h2>
-                            <h3>The idea</h3>
-                            <p>Fusce commodo tincidunt convallis. <br> Nunc at purus vitae nisl sagittis grav ida ut sit amet diam.</p>
-                            <a href="#" class="readmore">READ MORE</a>
-                        </div>
+                        <h2 align="center"> Canal de YouTube</h2>
+                        <iframe width="500" height="300" src="https://www.youtube.com/embed/6b_qy08ReIs"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-
+                    <div class="col-lg-2 col-md-6">
                     </div>
-                    <div class="col-lg-4 col-md-12">
-                        <div class="solid-service-box">
-                            <h2>03.</h2>
-                            <h3>The Success</h3>
-                            <p>Fusce commodo tincidunt convallis. <br> Nunc at purus vitae nisl sagittis grav ida ut sit amet diam.</p>
-                            <a href="#" class="readmore">READ MORE</a>
+                    <div class="col-lg-6 col-md-6">
+                        <h2 align="center">Página de Facebook</h2>
+                        <div id="fb-root"></div>
+                        <script async defer
+                            src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
+                        <div class="fb-video" data-href="https://fb.watch/8kXuzPlQ77/" data-width="500" data-height="300"
+                            data-show-text="false">
+                            <div class="fb-xfbml-parse-ignore">
+                                <blockquote cite="https://fb.watch/8kXuzPlQ77/">
+                                    <a href="https://fb.watch/8kXuzPlQ77/">Visión de Fe</a>
+                                    <p>Visión de Fe</p>
+                                    Subido por <a href="https://www.facebook.com/facebook/">Visión de Fe</a>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
         <!-- Service box section end -->
 
 
 
         <!-- Footer section start -->
-        <footer class="footer-section">
+        <!--<footer class="footer-section">-->
 
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            <div class="copyright">Copyright &copy;
+            <!--<div class="copyright">Copyright &copy;
                 <script>
                     document.write(new Date().getFullYear());
-                </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
+                </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o"
+                    aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+            </div>-->
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        </footer>
+        <!--</footer>-->
         <!-- Footer section end -->
 
 
