--- a/voluntariado-front/admin.html
+++ b/voluntariado-front/admin.html
@@ -97,21 +97,18 @@
                     </div>
 
                 </div>
-
-
-
             </div>
         </div>
     </section>
 
-    <section class="intro-section pt100 pb50">
+    <!--<section class="intro-section pt100 pb50">
         <div class="container">
             <div class="row">
 
 
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- Intro section end -->
 
@@ -119,18 +116,18 @@
 
 
     <!-- Footer section start -->
-    <footer class="footer-section">
+    <!--<footer class="footer-section">-->
 
 
 
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        <div class="copyright">Copyright &copy;
+        <!--<div class="copyright">Copyright &copy;
             <script>
                 document.write(new Date().getFullYear());
-            </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
+            </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>-->
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
-    </footer>
+    <!--</footer>-->
     <!-- Footer section end -->
 
 
