--- a/voluntariado-front/login.html
+++ b/voluntariado-front/login.html
@@ -61,7 +61,7 @@
 
                     <div class="text-center p-t-12">
                         <span class="txt1">
-							Olvido
+							Olvidó su
 						</span>
                         <a class="txt2" href="#">
 							Usuario / Constraseña?
